# yetanother-cryptocurrency-pipeline

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
airflow/dags/: orchestrator.py
api_request/: api_request.py  insert_records.py
dbt/: .user.yml
dbt/my_project/models/mart/: bitcoin_currency_report.sql
dbt/my_project/models/sources/: sources.yml
dbt/my_project/models/staging/: stg_crypto_currency_data.sql
docker/: .env
