[project]
name = "yetanother-cryptocurrency-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "apache-airflow==3.1.6",
    "apache-airflow-providers-docker==4.5.2",
    "psycopg2-binary==2.9.11",
    "requests==2.32.5",
]
